Стилизуем и анимируем модалы

--- a/catalog.html
+++ b/catalog.html
@@ -101,7 +101,7 @@
     </div>
     <section class="main-section container">
       <div class="filter">
-        <h2>Фильтр</h2>
+        <h2>Фильтр:</h2>
         <p>Цена:</p>
         <form class="filter-form" action="https://echo.htmlacademy.ru" method="post">
           <div class="range-controls">
