--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i&display=swap&subset=cyrillic" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&display=swap&subset=cyrillic" rel="stylesheet">
   <link href="css/normalize.css" rel="stylesheet">
-  <link href="css/style.css" rel="stylesheet">
+  <link href="css/style-min.css" rel="stylesheet">
 </head>
 
 <body>
@@ -324,16 +324,16 @@
         <div class="first-line">
           <p class="first-field">
             <label class="name" for="your-name">Ваше имя:</label>
-            <input class="modal-name" id="your-name" type="text" name="name" placeholder="Имя Фамилия" required>
+            <input class="modal-name" id="your-name" type="text" name="name" placeholder="Имя Фамилия">
           </p>
           <p class="second-field">
             <label class="email" for="your-email">Ваш e-mail:</label>
-            <input class="modal-email" id="your-email" type="email" name="email" placeholder="email@example.ru" required>
+            <input class="modal-email" id="your-email" type="email" name="email" placeholder="email@example.ru">
           </p>
         </div>
         <p class="letter">
           <label class="text" for="text-form">Текст письма:</label>
-          <input class="modal-text" id="text-form" type="text" name="next" placeholder="В свободной форме" required>
+          <input class="modal-text" id="text-form" type="text" name="next" placeholder="В свободной форме">
         </p>
         <div class="button-container">
           <button class="popup-button" type="submit">Отправить</button>
@@ -349,106 +349,8 @@
 
 
   <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU"></script>
-  <script>
-    var myMap;
+  <script src="js/main.js"></script>
 
-    // Дождёмся загрузки API и готовности DOM.
-    ymaps.ready(init);
-
-    function init() {
-      // Создание экземпляра карты и его привязка к контейнеру с
-      // заданным id ("map").
-      myMap = new ymaps.Map('map_canvas', {
-        // При инициализации карты обязательно нужно указать
-        // её центр и коэффициент масштабирования.
-        center: [59.93863106417265,30.3230545], // Москва
-        zoom: 17,
-        controls: ['zoomControl']
-      }, {
-        searchControlProvider: 'yandex#search'
-      });
-      myMap.geoObjects
-       .add(new ymaps.Placemark([59.93863106417265,30.3230545], {
-            balloonContent: 'цвет <strong>голубой</strong>',
-            iconCaption: 'ул. Б. Конюшенная, д. 19/8'
-        }, {
-            preset: 'islands#dotIconWithCaption',
-            iconCaptionMaxWidth: '200'
-        }))
-    }
-  </script>
-  <script>
-    var button = document.querySelector(".write-us-button");
-    var popup = document.querySelector(".modal-contacts-popup");
-    var close = popup.querySelector(".modal-close");
-    var link = document.querySelector(".map-link");
-    var mappopup = document.querySelector(".map-popup");
-    var mapclose = document.querySelector(".map-close");
-    var nameInput = popup.querySelector("[name=name]");
-    var emailInput = popup.querySelector("[name=email]");
-    var form = popup.querySelector(".modal-form");
-    var submit = popup.querySelector(".popup-button");
-
-    var isStorageSupport = true;
-    var storage = "";
-
-    try {
-      storage = localStorage.getItem("login");
-    } catch (err) {
-      isStorageSupport = false;
-    }
-
-    button.addEventListener("click", function(evt) {
-      evt.preventDefault();
-      popup.classList.add("modal-show");
-
-      if (storage) {
-        login.value = storage;
-        emailInput.focus();
-      } else {
-        nameInput.focus();
-      }
-    });
-
-    close.addEventListener("click", function(evt) {
-      evt.preventDefault();
-      popup.classList.remove("modal-show");
-      popup.classList.remove("modal-error");
-    });
-
-    link.addEventListener("click", function(evt) {
-      evt.preventDefault();
-      mappopup.classList.add("modal-show");
-    });
-
-    mapclose.addEventListener("click", function(evt) {
-      evt.preventDefault();
-      mappopup.classList.remove("modal-show");
-    });
-
-    form.addEventListener("submit", function(evt) {
-      if (!login.value || !password.value) {
-        evt.preventDefault();
-        popup.classList.remove("modal-error");
-        popup.offsetWidth = popup.offsetWidth;
-        popup.classList.add("modal-error");
-      } else {
-        if (isStorageSupport) {
-          localStorage.setItem("login", login.value);
-        }
-      }
-    });
-
-    window.addEventListener("keydown", function(evt) {
-      if (evt.keyCode === 27) {
-        evt.preventDefault();
-        if (popup.classList.contains("modal-show")) {
-          popup.classList.remove("modal-show");
-          popup.classList.remove("modal-error");
-        }
-      }
-    });
-  </script>
 </body>
 
 </html>
