--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
 
 
   <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU"></script>
-  <script src="js/main.js"></script>
+  <script src="js/main.min.js"></script>
 
 </body>
 
