--- a/catalog.html
+++ b/catalog.html
@@ -7,7 +7,7 @@
   <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i&display=swap&subset=cyrillic" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=PT+Sans&display=swap&subset=cyrillic" rel="stylesheet">
   <link href="css/normalize.css" rel="stylesheet">
-  <link href="css/style.min.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -46,7 +46,7 @@
     </div>
     <div class="header-middle-wrapper">
       <div class="container container-flex">
-        <h1 class="site-label">Интернет-магазин строительных материалов <br>и инструментов для ремонта</h1>
+        <h1 class="site-label">Интернет-магазин строительных материалов и инструментов для ремонта</h1>
         <address class="header-address">
           <p class="phone">+7 (812) 555-05-55</p>
           <p class="place">г. Санкт-Петербург, ул. Б. Конюшенная д. 19/8</p>
@@ -182,9 +182,12 @@
               <p><a class="buy" href="#">Купить</a></p>
               <p><a class="bookmark" href="#">В закладки</a></p>
             </div>
-            <img class="image" src="img/perforator_2.jpg" alt="Перфоратор Bosch bfg 2000">
+            <img class="image" src="img/perforator_2.jpg" width="218" height="170" alt="Перфоратор Bosch bfg 2000">
             <a href="#">
-              <h3 class="title">Перфоратор <span class="good-label-style">Bosch</span> <br> BFG 3000</h3>
+              <h3 class="title">Перфоратор
+                <span class="good-label-style">Bosch</span>
+                <p>BFG 3000</p>
+              </h3>
             </a>
             <p class="discount">22 500 Р.</p>
             <p class="price"><a class="price-link" href="#">15500 Р.</a></p>
@@ -194,9 +197,12 @@
               <p><a class="buy" href="#">Купить</a></p>
               <p><a class="bookmark" href="#">В закладки</a></p>
             </div>
-            <img class="image" src="img/perforator_3.jpg" alt="Перфоратор Bosch bfg 2000">
+            <img class="image" src="img/perforator_3.jpg" width="218" height="170" alt="Перфоратор Bosch bfg 2000">
             <a href="#">
-              <h3 class="title">Перфоратор <span class="good-label-style">Bosch</span> <br> BFG 6000</h3>
+              <h3 class="title">Перфоратор
+                <span class="good-label-style">Bosch</span>
+                <p>BFG 6000</p>
+              </h3>
             </a>
             <p class="discount">30 500 Р.</p>
             <p class="price"><a class="price-link" href="#">22500 Р.</a></p>
@@ -206,9 +212,12 @@
               <p><a class="buy" href="#">Купить</a></p>
               <p><a class="bookmark" href="#">В закладки</a></p>
             </div>
-            <img class="image" src="img/perforator_2.jpg" alt="Перфоратор Bosch bfg 2000">
+            <img class="image" src="img/perforator_2.jpg" width="218" height="170" alt="Перфоратор Bosch bfg 2000">
             <a href="#">
-              <h3 class="title">Перфоратор <span class="good-label-style">Bosch</span> <br> BFG 2000</h3>
+              <h3 class="title">Перфоратор
+                <span class="good-label-style">Bosch</span>
+                <p>BFG 2000</p>
+              </h3>
             </a>
             <p class="discount"></p>
             <p class="price"><a class="price-link" href="#">12500 Р.</a></p>
@@ -218,9 +227,12 @@
               <p><a class="buy" href="#">Купить</a></p>
               <p><a class="bookmark" href="#">В закладки</a></p>
             </div>
-            <img class="image" src="img/perforator_4.jpg" alt="Перфоратор Bosch bfg 2000">
+            <img class="image" src="img/perforator_4.jpg" width="218" height="170" alt="Перфоратор Bosch bfg 2000">
             <a href="#">
-              <h3 class="title">Перфоратор <span class="good-label-style">Bosch</span> <br> BFG 3000</h3>
+              <h3 class="title">Перфоратор
+                <span class="good-label-style">Bosch</span>
+                <p>BFG 3000</p>
+              </h3>
             </a>
             <p class="discount">22 500 Р.</p>
             <p class="price"><a class="price-link" href="#">15500 Р.</a></p>
@@ -230,9 +242,12 @@
               <p><a class="buy" href="#">Купить</a></p>
               <p><a class="bookmark" href="#">В закладки</a></p>
             </div>
-            <img class="image" src="img/perforator_3.jpg" alt="Перфоратор Bosch bfg 2000">
+            <img class="image" src="img/perforator_3.jpg" width="218" height="170" alt="Перфоратор Bosch bfg 2000">
             <a href="#">
-              <h3 class="title">Перфоратор <span class="good-label-style">Bosch</span> <br> BFG 6000</h3>
+              <h3 class="title">Перфоратор
+                <span class="good-label-style">Bosch</span>
+                <p>BFG 6000</p>
+              </h3>
             </a>
             <p class="discount">30 500 Р.</p>
             <p class="price"><a class="price-link" href="#">22500 Р.</a></p>
@@ -242,9 +257,12 @@
               <p><a class="buy" href="#">Купить</a></p>
               <p><a class="bookmark" href="#">В закладки</a></p>
             </div>
-            <img class="image" src="img/perforator_2.jpg" alt="Перфоратор Bosch bfg 2000">
+            <img class="image" src="img/perforator_2.jpg" width="218" height="170" alt="Перфоратор Bosch bfg 2000">
             <a href="#">
-              <h3 class="title">Перфоратор <span class="good-label-style">Bosch</span> <br> BFG 2000</h3>
+              <h3 class="title">Перфоратор
+                <span class="good-label-style">Bosch</span>
+                <p>BFG 2000</p>
+              </h3>
             </a>
             <p class="discount"></p>
             <p class="price"><a class="price-link" href="#">12500 Р.</a></p>
@@ -254,9 +272,12 @@
               <p><a class="buy" href="#">Купить</a></p>
               <p><a class="bookmark" href="#">В закладки</a></p>
             </div>
-            <img class="image" src="img/perforator_2.jpg" alt="Перфоратор Bosch bfg 2000">
+            <img class="image" src="img/perforator_2.jpg" width="218" height="170" alt="Перфоратор Bosch bfg 2000">
             <a href="#">
-              <h3 class="title">Перфоратор <span class="good-label-style">Bosch</span> <br> BFG 3000</h3>
+              <h3 class="title">Перфоратор
+                <span class="good-label-style">Bosch</span>
+                <p>BFG 3000</p>
+              </h3>
             </a>
             <p class="discount">22 500 Р.</p>
             <p class="price"><a class="price-link" href="#">15500 Р.</a></p>
@@ -266,9 +287,12 @@
               <p><a class="buy" href="#">Купить</a></p>
               <p><a class="bookmark" href="#">В закладки</a></p>
             </div>
-            <img class="image" src="img/perforator_2.jpg" alt="Перфоратор Bosch bfg 2000">
+            <img class="image" src="img/perforator_2.jpg" width="218" height="170" alt="Перфоратор Bosch bfg 2000">
             <a href="#">
-              <h3 class="title">Перфоратор <span class="good-label-style">Bosch</span> <br> BFG 3000</h3>
+              <h3 class="title">Перфоратор
+                <span class="good-label-style">Bosch</span>
+                <p>BFG 3000</p>
+              </h3>
             </a>
             <p class="discount">30 500 Р.</p>
             <p class="price"><a class="price-link" href="#">25500 Р.</a></p>
@@ -278,9 +302,12 @@
               <p><a class="buy" href="#">Купить</a></p>
               <p><a class="bookmark" href="#">В закладки</a></p>
             </div>
-            <img class="image" src="img/perforator_2.jpg" alt="Перфоратор Bosch bfg 2000">
+            <img class="image" src="img/perforator_2.jpg" width="218" height="170" alt="Перфоратор Bosch bfg 2000">
             <a href="#">
-              <h3 class="title">Перфоратор <span class="good-label-style">Bosch</span> <br> BFG 3000</h3>
+              <h3 class="title">Перфоратор
+                <span class="good-label-style">Bosch</span>
+                <p>BFG 3000</p>
+              </h3>
             </a>
             <p class="discount"></p>
             <p class="price"><a class="price-link" href="#">12500 Р.</a></p>
@@ -294,14 +321,14 @@
         </ul>
       </div>
     </section>
-    <div class="about-drill">
+    <section class="about-drill">
       <div class="container">
         <h2>Пара слов о перфораторах</h2>
-        <p>Перфоратор — универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне.
-        <br>Существуют электромеханические и пневматические перфораторы. Современные модели могут выполнять функции дрели, шуруповерта и отбойного молотка.
+        <p>Перфоратор — универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне.<br>
+        Существуют электромеханические и пневматические перфораторы. Современные модели могут выполнять функции дрели, шуруповерта и отбойного молотка.
         В ассортиментном ряду есть выбор «трехрежимников»: в одном устройстве будут совмещены отбойный молоток и ударная дрель.</p>
       </div>
-    </div>
+    </section>
   </main>
 
   <footer class="footer">
@@ -322,7 +349,8 @@
       </div>
       <div class="footer-contacts">
         <address class="footer-address">
-          <p>г. Санкт-Петербург, ул. Б. Конюшенная д. 19/8<br>+7 (812) 555-05-55</p>
+          <p>г. Санкт-Петербург, ул. Б. Конюшенная д. 19/8</p>
+          <p>+7 (812) 555-05-55</p>
         </address>
         <ul class="footer-category-list">
           <li class="footer-category-item"><a href="#">Материалы</a></li>
@@ -334,7 +362,8 @@
     </div>
     <div class="copyright">
       <div class="container container-flex">
-        <p>© 2010–2019 Компания «Техномарт» <br> Все права защищены</p>
+        <p>© 2010–2019 Компания «Техномарт»</p>
+        <p>Все права защищены</p>
         <ul class="social-list">
           <li><a class="vk" href="#" aria-label="Вконтакте">
               <svg class="vk-logo" xmlns="http://www.w3.org/2000/svg" width="26" height="15" viewBox="0 0 26 15">
@@ -356,13 +385,15 @@
           </li>
         </ul>
         <div class="site-information">
-          <p>Обратная связь:<br>
+          <p>Обратная связь:</p>
+          <p>
             <a class="feedback" href="mail@htmlacademy.ru">mail@htmlacademy.ru</a>
           </p>
-          <p>Разработано -<br>
+          <p>Разработано -</p>
+          <p>
             <a class="create" href="https://htmlacademy.ru">htmlacademy.ru</a>
           </p>
-        </div>
+      </div>
       </div>
     </div>
   </footer>
