--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i&display=swap&subset=cyrillic" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&display=swap&subset=cyrillic" rel="stylesheet">
   <link href="css/normalize.css" rel="stylesheet">
-  <link href="css/style.min.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -20,16 +20,14 @@
           </svg>
         </a>
         <form class="search-form" action="https://echo.htmlacademy.ru" method="post">
-          <p>
-            <label class="search-form-label visually-hidden" for="search">Поиск</label>
-            <input class="form" id="search" type="search" placeholder="Поиск:">
-            <button class="search-button" type="submit" name="button">
-              <svg class="search-icon" xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 17 17">
-                <path
-                  d="M17 15.586l-3.542-3.542A7.465 7.465 0 0 0 15 7.5 7.5 7.5 0 1 0 7.5 15c1.71 0 3.282-.579 4.544-1.542L15.586 17 17 15.586zM2 7.5C2 4.467 4.467 2 7.5 2 10.532 2 13 4.467 13 7.5c0 3.032-2.468 5.5-5.5 5.5A5.506 5.506 0 0 1 2 7.5z" />
-                </svg>
-            </button>
-          </p>
+          <label class="search-form-label visually-hidden" for="search">Поиск</label>
+          <input class="form" id="search" type="search" placeholder="Поиск:">
+          <button class="search-button" type="submit" name="button">
+            <svg class="search-icon" xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 17 17">
+              <path
+                d="M17 15.586l-3.542-3.542A7.465 7.465 0 0 0 15 7.5 7.5 7.5 0 1 0 7.5 15c1.71 0 3.282-.579 4.544-1.542L15.586 17 17 15.586zM2 7.5C2 4.467 4.467 2 7.5 2 10.532 2 13 4.467 13 7.5c0 3.032-2.468 5.5-5.5 5.5A5.506 5.506 0 0 1 2 7.5z" />
+              </svg>
+          </button>
         </form>
         <ul class="order-interface">
           <li class="bookmarks">
@@ -46,7 +44,7 @@
     </div>
     <div class="main-header-middle-wrapper">
       <div class="container container-flex">
-        <h1 class="site-label">Интернет-магазин строительных материалов <br>и инструментов для ремонта</h1>
+        <h1 class="site-label">Интернет-магазин строительных материалов и инструментов для ремонта</h1>
         <address class="header-address">
           <p class="phone">+7 (812) 555-05-55</p>
           <p class="place">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
@@ -98,11 +96,11 @@
       <div class="category-list">
         <div class="catalog-item-galery">
           <div class="first-slide">
-            <img class="banner" src="img/drill-baner.jpg" alt="Дрели соседям на радость">
-            <a href="#">Открыть каталог</a>
+            <img class="banner" src="img/drill-baner.jpg" width="620" height="266" alt="Дрели соседям на радость">
+            <a href="catalog.html">Открыть каталог</a>
           </div>
           <div class="second-slide">
-            <img class="banner" src="img/drill-baner.jpg" alt="Дрели соседям на радость">
+            <img class="banner" src="img/drill-baner.jpg" width="620" height="266" alt="Дрели соседям на радость">
             <a href="#">Открыть каталог</a>
           </div>
           <div class="slider-control">
@@ -138,9 +136,12 @@
             <p><a class="buy" href="#">Купить</a></p>
             <p><a class="bookmark" href="#">В закладки</a></p>
           </div>
-          <img class="image" src="img/perforator_1.jpg" alt="Перфоратор Bosch bfg 2000">
+          <img class="image" src="img/perforator_1.jpg" width="218" height="170" alt="Перфоратор Bosch bfg 2000">
           <a class="good-link" href="#">
-            <h3 class="title">Перфоратор <span class="good-label-style">Bosch</span> <br> BFG 9000</h3>
+            <h3 class="title">Перфоратор
+              <span class="good-label-style">Bosch</span>
+              <p>BFG 9000</p>
+            </h3>
           </a>
           <p class="discount">32500 Р.</p>
           <p class="price"><a class="price-link" href="#">25500 Р.</a></p>
@@ -150,9 +151,12 @@
             <p><a class="buy" href="#">Купить</a></p>
             <p><a class="bookmark" href="#">В закладки</a></p>
           </div>
-          <img class="image" src="img/perforator_2.jpg" alt="Перфоратор Bosch bfg 2000">
+          <img class="image" src="img/perforator_2.jpg" width="218" height="170" alt="Перфоратор Bosch bfg 2000">
           <a class="good-link" href="#">
-            <h3 class="title">Перфоратор <span class="good-label-style">Bosch</span> <br> BFG 3000</h3>
+            <h3 class="title">Перфоратор
+              <span class="good-label-style">Bosch</span>
+              <p>BFG 3000</p>
+            </h3>
           </a>
           <p class="discount">22500 Р.</p>
           <p class="price"><a class="price-link" href="#">15500 Р.</a></p>
@@ -162,9 +166,12 @@
             <p><a class="buy" href="#">Купить</a></p>
             <p><a class="bookmark" href="#">В закладки</a></p>
           </div>
-          <img class="image" src="img/perforator_3.jpg" alt="Перфоратор Bosch bfg 2000">
+          <img class="image" src="img/perforator_3.jpg" width="218" height="170" alt="Перфоратор Bosch bfg 2000">
           <a class="good-link" href="#">
-            <h3 class="title">Перфоратор <span class="good-label-style">Bosch</span> <br> BFG 6000</h3>
+            <h3 class="title">Перфоратор
+              <span class="good-label-style">Bosch</span>
+              <p>BFG 6000</p>
+            </h3>
           </a>
           <p class="discount">30500 Р.</p>
           <p class="price"><a class="price-link" href="#">25500 Р.</a></p>
@@ -174,9 +181,12 @@
             <p><a class="buy" href="#">Купить</a></p>
             <p><a class="bookmark" href="#">В закладки</a></p>
           </div>
-          <img class="image" src="img/perforator_4.jpg" alt="Перфоратор Bosch bfg 2000">
+          <img class="image" src="img/perforator_4.jpg" width="218" height="170" alt="Перфоратор Bosch bfg 2000">
           <a class="good-link" href="#">
-            <h3 class="title">Перфоратор <span class="good-label-style">Bosch</span> <br> BFG 2000</h3>
+            <h3 class="title">Перфоратор
+              <span class="good-label-style">Bosch</span>
+              <p>BFG 2000</p>
+            </h3>
           </a>
           <p class="discount"></p>
           <p class="price"><a class="price-link" href="#">12500 Р.</a></p>
@@ -190,14 +200,14 @@
         <a href="#">Все производители:</a>
       </div>
       <ul class="popular-producers-list">
-        <li class="popular-producers-items"><a href="#"><img src="img/bosch.png" alt="BOSCH"></a></li>
-        <li class="popular-producers-items"><a href="#"><img src="img/makita.png" alt="makita"></a></li>
-        <li class="popular-producers-items"><a href="#"><img src="img/dewalt.png" alt="dewalt"></a></li>
-        <li class="popular-producers-items"><a href="#"><img src="img/interskol.png" alt="интерскол"></a></li>
-        <li class="popular-producers-items"><a href="#"><img src="img/hitachi.png" alt="hitachi"></a></li>
-        <li class="popular-producers-items"><a href="#"><img src="img/lg.png" alt="LG"></a></li>
-        <li class="popular-producers-items"><a href="#"><img src="img/aeg.png" alt="AEG"></a></li>
-        <li class="popular-producers-items"><a href="#"><img src="img/metabo.png" alt="metabo"></a></li>
+        <li class="popular-producers-items"><a href="#"><img src="img/bosch.png" width="126" height="23" alt="BOSCH"></a></li>
+        <li class="popular-producers-items"><a href="#"><img src="img/makita.png" width="123" height="40" alt="makita"></a></li>
+        <li class="popular-producers-items"><a href="#"><img src="img/dewalt.png" width="146" height="44" alt="dewalt"></a></li>
+        <li class="popular-producers-items"><a href="#"><img src="img/interskol.png" width="200" height="35" alt="интерскол"></a></li>
+        <li class="popular-producers-items"><a href="#"><img src="img/hitachi.png" width="169" height="31" alt="hitachi"></a></li>
+        <li class="popular-producers-items"><a href="#"><img src="img/lg.png" width="121" height="73" alt="LG"></a></li>
+        <li class="popular-producers-items"><a href="#"><img src="img/aeg.png" width="151" height="70" alt="AEG"></a></li>
+        <li class="popular-producers-items"><a href="#"><img src="img/metabo.png" width="204" height="58" alt="metabo"></a></li>
       </ul>
     </section>
     <section class="servises-container">
@@ -215,15 +225,16 @@
           </ul>
           <div class="delivery">
             <h4>Доставка</h4>
-            <p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, <br>поднимая его на ваш этаж!</p>
+            <p>Мы с удовольствием доставим ваш товар прямо<br>к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем,<br>поднимая его на ваш этаж!</p>
           </div>
           <div class="warranty">
             <h4>Гарантия</h4>
-            <p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! <br> Ведь мы неплохо заработаем, <br> поднимая его на ваш этаж!</p>
+            <p>Если купленый у нас товар поломается или заскрипит, а так же в случаи пожара,спровоцированного его возгоранием, вы всегда можете быть уверены в нашей гарантии. Мы обменяем сгоревший товар на новый.<br>Дом уж восстановите как-нибудь сами.</p>
           </div>
           <div class="credit">
             <h4>Кредит</h4>
-            <p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! <br> Ведь мы неплохо заработаем, <br> поднимая его на ваш этаж!</p>
+            <p>Залезть в долговую яму стало проще!<br>Кредитные консультанты вам на помощь.</p>
+            <a href="#">Отправить заявку</a>
           </div>
         </div>
       </div>
@@ -244,11 +255,11 @@
         </div>
         <div class="contacts">
           <h4 class="contacts-label">Контакты</h4>
-          <p class="paragraph-three">Вы можете забрать товар сами, <br>заехав в наш офис:</p>
+          <p class="paragraph-three">Вы можете забрать товар сами, заехав в наш офис:</p>
           <a class="map-link" href="https://www.google.ru/maps/place/Большая+Конюшенная+ул.,+19,+Санкт-Петербург,+191186/@59.9387956,30.3219225,17z/data=!3m1!4b1!4m5!3m4!1s0x4696310fca5ba729:0xea9c53d4493c879f!8m2!3d59.9387942!4d30.3230833">
             <img class="map" src="img/map.png" width="300" height="158" alt="г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8">
           </a>
-          <button class="write-us-button" type="button" name="modal-open-button">Заблудились? Напишите нам!</button>
+          <a href="#" class="write-us-button" type="button" name="modal-open-button">Заблудились? Напишите нам!</a>
         </div>
       </div>
     </section>
@@ -272,7 +283,8 @@
       </div>
       <div class="footer-contacts">
         <address class="footer-address">
-          <p>г. Санкт-Петербург, ул. Б. Конюшенная д. 19/8<br>+7 (812) 555-05-55</p>
+          <p>г. Санкт-Петербург, ул. Б. Конюшенная д. 19/8</p>
+          <p>+7 (812) 555-05-55</p>
         </address>
         <ul class="footer-category-list">
           <li class="footer-category-item"><a href="#">Материалы</a></li>
@@ -284,7 +296,8 @@
     </div>
     <div class="copyright">
       <div class="container container-flex">
-        <p>© 2010–2019 Компания «Техномарт» <br> Все права защищены</p>
+        <p>© 2010–2019 Компания «Техномарт»</p>
+        <p>Все права защищены</p>
         <ul class="social-list">
           <li><a class="vk" href="#" aria-label="Вконтакте">
               <svg class="vk-logo" xmlns="http://www.w3.org/2000/svg" width="26" height="15" viewBox="0 0 26 15">
@@ -307,10 +320,11 @@
           </li>
         </ul>
         <div class="site-information">
-          <p>Обратная связь:<br>
-            <a class="feedback" href="mail@htmlacademy.ru">mail@htmlacademy.ru</a>
-          </p>
-          <p>Разработано -<br>
+          <p>Обратная связь:</p>
+            <p>
+              <a class="feedback" href="mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+            </p>
+          <p>Разработано -</p>
             <a class="create" href="https://htmlacademy.ru">htmlacademy.ru</a>
           </p>
         </div>
