--- a/catalog.html
+++ b/catalog.html
@@ -121,7 +121,7 @@
           <p>Производители:</p>
           <ul class="produsers-selection-list">
             <li class="produsers-selection-item">
-              <input class="checkbox visually-hidden" type="checkbox" id="check-1">
+              <input class="checkbox visually-hidden" type="checkbox" id="check-1" disabled>
               <label class="checkbox-label" for="check-1">Bosch</label>
             </li>
             <li class="produsers-selection-item">
