--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
           <a class="map-link" href="https://www.google.ru/maps/place/Большая+Конюшенная+ул.,+19,+Санкт-Петербург,+191186/@59.9387956,30.3219225,17z/data=!3m1!4b1!4m5!3m4!1s0x4696310fca5ba729:0xea9c53d4493c879f!8m2!3d59.9387942!4d30.3230833">
             <img class="map" src="img/map.png" width="300" height="158" alt="г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8">
           </a>
-          <a href="#" class="write-us-button" type="button" name="modal-open-button">Заблудились? Напишите нам!</a>
+          <a href="contacts.html" class="write-us-button" type="button" name="modal-open-button">Заблудились? Напишите нам!</a>
         </div>
       </div>
     </section>
