--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
           <a class="good-link" href="#">
             <h3 class="title">Перфоратор
               <span class="good-label-style">Bosch</span>
-              <p>BFG 9000</p>
+              BFG 9000
             </h3>
           </a>
           <p class="discount">32500 Р.</p>
@@ -155,7 +155,7 @@
           <a class="good-link" href="#">
             <h3 class="title">Перфоратор
               <span class="good-label-style">Bosch</span>
-              <p>BFG 3000</p>
+              BFG 3000
             </h3>
           </a>
           <p class="discount">22500 Р.</p>
@@ -170,7 +170,7 @@
           <a class="good-link" href="#">
             <h3 class="title">Перфоратор
               <span class="good-label-style">Bosch</span>
-              <p>BFG 6000</p>
+              BFG 6000
             </h3>
           </a>
           <p class="discount">30500 Р.</p>
@@ -185,7 +185,7 @@
           <a class="good-link" href="#">
             <h3 class="title">Перфоратор
               <span class="good-label-style">Bosch</span>
-              <p>BFG 2000</p>
+              BFG 2000
             </h3>
           </a>
           <p class="discount"></p>
@@ -259,7 +259,7 @@
           <a class="map-link" href="https://www.google.ru/maps/place/Большая+Конюшенная+ул.,+19,+Санкт-Петербург,+191186/@59.9387956,30.3219225,17z/data=!3m1!4b1!4m5!3m4!1s0x4696310fca5ba729:0xea9c53d4493c879f!8m2!3d59.9387942!4d30.3230833">
             <img class="map" src="img/map.png" width="300" height="158" alt="г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8">
           </a>
-          <a href="contacts.html" class="write-us-button" type="button" name="modal-open-button">Заблудились? Напишите нам!</a>
+          <a href="contacts.html" class="write-us-button">Заблудились? Напишите нам!</a>
         </div>
       </div>
     </section>
@@ -296,8 +296,7 @@
     </div>
     <div class="copyright">
       <div class="container container-flex">
-        <p>© 2010–2019 Компания «Техномарт»</p>
-        <p>Все права защищены</p>
+        <p class="creation-date">© 2010–2019 Компания «Техномарт» Все права защищены</p>
         <ul class="social-list">
           <li><a class="vk" href="#" aria-label="Вконтакте">
               <svg class="vk-logo" xmlns="http://www.w3.org/2000/svg" width="26" height="15" viewBox="0 0 26 15">
@@ -320,11 +319,10 @@
           </li>
         </ul>
         <div class="site-information">
-          <p>Обратная связь:</p>
-            <p>
-              <a class="feedback" href="mail@htmlacademy.ru">mail@htmlacademy.ru</a>
-            </p>
-          <p>Разработано -</p>
+          <p class="feedback">Обратная связь:
+            <a class="feedback-link" href="mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+          </p>
+          <p class="create-by">Разработано -
             <a class="create" href="https://htmlacademy.ru">htmlacademy.ru</a>
           </p>
         </div>
