--- a/catalog.html
+++ b/catalog.html
@@ -14,22 +14,20 @@
   <header class="main-header">
     <div class="header-top-wrapper">
       <div class="container container-flex">
-        <a class="logo-link" href="index.html" aria-label="Техномарт">
+        <a class="logo-link" href="#" aria-label="Техномарт">
           <svg class="header-logo" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="109px" height="19px">
-            <path fill-rule="evenodd" fill="#ffffff" d="M104.611,2.306 L104.611,18.055 L102.483,18.055 L102.483,2.306 L98.700,2.306 L98.700,0.556 L108.394,0.556 L108.394,2.306 L104.611,2.306 ZM96.208,11.568 C95.837,12.060 95.372,12.410 94.813,12.618 C94.253,12.827 93.587,12.931 92.815,12.931 C92.452,12.931 92.042,12.906 91.585,12.856 C91.128,12.806 90.750,12.747 90.450,12.681 L90.450,18.055 L88.322,18.055 L88.322,0.806 C88.921,0.623 89.524,0.494 90.131,0.419 C90.738,0.344 91.396,0.307 92.105,0.307 C93.051,0.307 93.855,0.411 94.517,0.619 C95.179,0.828 95.715,1.173 96.125,1.656 C96.535,2.140 96.834,2.781 97.023,3.581 C97.213,4.381 97.307,5.373 97.307,6.556 C97.307,7.773 97.216,8.789 97.035,9.606 C96.854,10.423 96.578,11.077 96.208,11.568 ZM95.002,4.306 C94.884,3.706 94.698,3.231 94.446,2.881 C94.194,2.531 93.875,2.286 93.489,2.144 C93.102,2.002 92.641,1.931 92.105,1.931 L90.450,1.931 L90.450,11.181 L92.105,11.181 C92.641,11.181 93.102,11.110 93.489,10.968 C93.875,10.827 94.194,10.581 94.446,10.231 C94.698,9.881 94.884,9.406 95.002,8.806 C95.120,8.206 95.179,7.456 95.179,6.556 C95.179,5.656 95.120,4.906 95.002,4.306 ZM83.021,13.556 L78.293,13.556 L77.229,18.055 L75.101,18.055 L79.120,0.556 L82.194,0.556 L86.213,18.055 L84.085,18.055 L83.021,13.556 ZM80.704,3.056 L80.610,3.056 L78.647,11.806 L82.667,11.806 L80.704,3.056 ZM70.315,5.056 L70.197,5.056 L66.769,15.805 L64.641,15.805 L61.212,5.056 L61.094,5.056 L60.385,18.055 L58.257,18.055 L59.202,0.556 L61.803,0.556 L65.657,12.556 L65.752,12.556 L69.606,0.556 L72.207,0.556 L73.153,18.055 L71.025,18.055 L70.315,5.056 ZM54.750,16.430 C54.309,17.114 53.777,17.597 53.154,17.880 C52.531,18.163 51.818,18.305 51.014,18.305 C50.211,18.305 49.497,18.163 48.875,17.880 C48.252,17.597 47.720,17.114 47.279,16.430 C46.837,15.747 46.502,14.827 46.274,13.668 C46.045,12.510 45.931,11.056 45.931,9.306 C45.931,7.556 46.045,6.102 46.274,4.944 C46.502,3.786 46.837,2.865 47.279,2.181 C47.720,1.498 48.252,1.015 48.875,0.731 C49.497,0.448 50.211,0.307 51.014,0.307 C51.818,0.307 52.531,0.448 53.154,0.731 C53.777,1.015 54.309,1.498 54.750,2.181 C55.191,2.865 55.526,3.786 55.755,4.944 C55.983,6.102 56.098,7.556 56.098,9.306 C56.098,11.056 55.983,12.510 55.755,13.668 C55.526,14.827 55.191,15.747 54.750,16.430 ZM53.722,5.606 C53.556,4.640 53.339,3.873 53.072,3.306 C52.803,2.740 52.488,2.348 52.126,2.131 C51.763,1.915 51.393,1.807 51.014,1.807 C50.636,1.807 50.266,1.915 49.903,2.131 C49.540,2.348 49.225,2.740 48.957,3.306 C48.689,3.873 48.473,4.640 48.307,5.606 C48.142,6.573 48.059,7.806 48.059,9.306 C48.059,10.806 48.142,12.039 48.307,13.006 C48.473,13.972 48.689,14.739 48.957,15.305 C49.225,15.872 49.540,16.264 49.903,16.480 C50.266,16.697 50.636,16.805 51.014,16.805 C51.393,16.805 51.763,16.697 52.126,16.480 C52.488,16.264 52.803,15.872 53.072,15.305 C53.339,14.739 53.556,13.972 53.722,13.006 C53.887,12.039 53.970,10.806 53.970,9.306 C53.970,7.806 53.887,6.573 53.722,5.606 ZM41.202,10.056 L36.237,10.056 L36.237,18.055 L34.109,18.055 L34.109,0.556 L36.237,0.556 L36.237,8.306 L41.202,8.306 L41.202,0.556 L43.330,0.556 L43.330,18.055 L41.202,18.055 L41.202,10.056 ZM29.917,18.055 L26.961,10.556 L24.006,18.055 L21.878,18.055 L25.425,9.056 L22.233,0.556 L24.361,0.556 L26.961,7.556 L29.562,0.556 L31.690,0.556 L28.498,9.056 L32.045,18.055 L29.917,18.055 ZM12.120,0.556 L20.159,0.556 L20.159,2.306 L14.248,2.306 L14.248,8.056 L19.450,8.056 L19.450,9.806 L14.248,9.806 L14.248,16.305 L20.159,16.305 L20.159,18.055 L12.120,18.055 L12.120,0.556 ZM6.332,18.055 L4.204,18.055 L4.204,2.306 L0.421,2.306 L0.421,0.556 L10.115,0.556 L10.115,2.306 L6.332,2.306 L6.332,18.055 Z" />
+            <path fill-rule="evenodd" fill="rgb(255, 255, 255)" d="M104.611,2.306 L104.611,18.055 L102.483,18.055 L102.483,2.306 L98.700,2.306 L98.700,0.556 L108.394,0.556 L108.394,2.306 L104.611,2.306 ZM96.208,11.568 C95.837,12.060 95.372,12.410 94.813,12.618 C94.253,12.827 93.587,12.931 92.815,12.931 C92.452,12.931 92.042,12.906 91.585,12.856 C91.128,12.806 90.750,12.747 90.450,12.681 L90.450,18.055 L88.322,18.055 L88.322,0.806 C88.921,0.623 89.524,0.494 90.131,0.419 C90.738,0.344 91.396,0.307 92.105,0.307 C93.051,0.307 93.855,0.411 94.517,0.619 C95.179,0.828 95.715,1.173 96.125,1.656 C96.535,2.140 96.834,2.781 97.023,3.581 C97.213,4.381 97.307,5.373 97.307,6.556 C97.307,7.773 97.216,8.789 97.035,9.606 C96.854,10.423 96.578,11.077 96.208,11.568 ZM95.002,4.306 C94.884,3.706 94.698,3.231 94.446,2.881 C94.194,2.531 93.875,2.286 93.489,2.144 C93.102,2.002 92.641,1.931 92.105,1.931 L90.450,1.931 L90.450,11.181 L92.105,11.181 C92.641,11.181 93.102,11.110 93.489,10.968 C93.875,10.827 94.194,10.581 94.446,10.231 C94.698,9.881 94.884,9.406 95.002,8.806 C95.120,8.206 95.179,7.456 95.179,6.556 C95.179,5.656 95.120,4.906 95.002,4.306 ZM83.021,13.556 L78.293,13.556 L77.229,18.055 L75.101,18.055 L79.120,0.556 L82.194,0.556 L86.213,18.055 L84.085,18.055 L83.021,13.556 ZM80.704,3.056 L80.610,3.056 L78.647,11.806 L82.667,11.806 L80.704,3.056 ZM70.315,5.056 L70.197,5.056 L66.769,15.805 L64.641,15.805 L61.212,5.056 L61.094,5.056 L60.385,18.055 L58.257,18.055 L59.202,0.556 L61.803,0.556 L65.657,12.556 L65.752,12.556 L69.606,0.556 L72.207,0.556 L73.153,18.055 L71.025,18.055 L70.315,5.056 ZM54.750,16.430 C54.309,17.114 53.777,17.597 53.154,17.880 C52.531,18.163 51.818,18.305 51.014,18.305 C50.211,18.305 49.497,18.163 48.875,17.880 C48.252,17.597 47.720,17.114 47.279,16.430 C46.837,15.747 46.502,14.827 46.274,13.668 C46.045,12.510 45.931,11.056 45.931,9.306 C45.931,7.556 46.045,6.102 46.274,4.944 C46.502,3.786 46.837,2.865 47.279,2.181 C47.720,1.498 48.252,1.015 48.875,0.731 C49.497,0.448 50.211,0.307 51.014,0.307 C51.818,0.307 52.531,0.448 53.154,0.731 C53.777,1.015 54.309,1.498 54.750,2.181 C55.191,2.865 55.526,3.786 55.755,4.944 C55.983,6.102 56.098,7.556 56.098,9.306 C56.098,11.056 55.983,12.510 55.755,13.668 C55.526,14.827 55.191,15.747 54.750,16.430 ZM53.722,5.606 C53.556,4.640 53.339,3.873 53.072,3.306 C52.803,2.740 52.488,2.348 52.126,2.131 C51.763,1.915 51.393,1.807 51.014,1.807 C50.636,1.807 50.266,1.915 49.903,2.131 C49.540,2.348 49.225,2.740 48.957,3.306 C48.689,3.873 48.473,4.640 48.307,5.606 C48.142,6.573 48.059,7.806 48.059,9.306 C48.059,10.806 48.142,12.039 48.307,13.006 C48.473,13.972 48.689,14.739 48.957,15.305 C49.225,15.872 49.540,16.264 49.903,16.480 C50.266,16.697 50.636,16.805 51.014,16.805 C51.393,16.805 51.763,16.697 52.126,16.480 C52.488,16.264 52.803,15.872 53.072,15.305 C53.339,14.739 53.556,13.972 53.722,13.006 C53.887,12.039 53.970,10.806 53.970,9.306 C53.970,7.806 53.887,6.573 53.722,5.606 ZM41.202,10.056 L36.237,10.056 L36.237,18.055 L34.109,18.055 L34.109,0.556 L36.237,0.556 L36.237,8.306 L41.202,8.306 L41.202,0.556 L43.330,0.556 L43.330,18.055 L41.202,18.055 L41.202,10.056 ZM29.917,18.055 L26.961,10.556 L24.006,18.055 L21.878,18.055 L25.425,9.056 L22.233,0.556 L24.361,0.556 L26.961,7.556 L29.562,0.556 L31.690,0.556 L28.498,9.056 L32.045,18.055 L29.917,18.055 ZM12.120,0.556 L20.159,0.556 L20.159,2.306 L14.248,2.306 L14.248,8.056 L19.450,8.056 L19.450,9.806 L14.248,9.806 L14.248,16.305 L20.159,16.305 L20.159,18.055 L12.120,18.055 L12.120,0.556 ZM6.332,18.055 L4.204,18.055 L4.204,2.306 L0.421,2.306 L0.421,0.556 L10.115,0.556 L10.115,2.306 L6.332,2.306 L6.332,18.055 Z" />
           </svg>
         </a>
         <form class="search-form" action="https://echo.htmlacademy.ru" method="post">
-          <p>
-            <label class="search-form-label visually-hidden" for="search">Поиск</label>
-            <input class="form" id="search" type="search" placeholder="Поиск:">
-            <button class="search-button" type="submit" name="button">
-              <svg class="search-icon" xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 17 17">
-                <path
-                  d="M17 15.586l-3.542-3.542A7.465 7.465 0 0 0 15 7.5 7.5 7.5 0 1 0 7.5 15c1.71 0 3.282-.579 4.544-1.542L15.586 17 17 15.586zM2 7.5C2 4.467 4.467 2 7.5 2 10.532 2 13 4.467 13 7.5c0 3.032-2.468 5.5-5.5 5.5A5.506 5.506 0 0 1 2 7.5z" />
-                </svg>
-            </button>
-          </p>
+          <label class="search-form-label visually-hidden" for="search">Поиск</label>
+          <input class="form" id="search" type="search" placeholder="Поиск:">
+          <button class="search-button" type="submit" name="button">
+            <svg class="search-icon" xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 17 17">
+              <path
+                d="M17 15.586l-3.542-3.542A7.465 7.465 0 0 0 15 7.5 7.5 7.5 0 1 0 7.5 15c1.71 0 3.282-.579 4.544-1.542L15.586 17 17 15.586zM2 7.5C2 4.467 4.467 2 7.5 2 10.532 2 13 4.467 13 7.5c0 3.032-2.468 5.5-5.5 5.5A5.506 5.506 0 0 1 2 7.5z" />
+              </svg>
+          </button>
         </form>
         <ul class="order-interface">
           <li class="bookmarks">
@@ -144,7 +142,7 @@
           <p>Питание:</p>
           <ul class="power-choice-list">
             <li class="power-choice-item">
-              <input class="radio visually-hidden" type="radio" name="radio" id="radio-1">
+              <input class="radio visually-hidden" type="radio" name="radio" id="radio-1" disabled>
               <label class="radio-label" for="radio-1">Акумуляторные</label>
             </li>
             <li class="power-choice-item">
@@ -186,7 +184,7 @@
             <a href="#">
               <h3 class="title">Перфоратор
                 <span class="good-label-style">Bosch</span>
-                <p>BFG 3000</p>
+                BFG 3000
               </h3>
             </a>
             <p class="discount">22 500 Р.</p>
@@ -201,7 +199,7 @@
             <a href="#">
               <h3 class="title">Перфоратор
                 <span class="good-label-style">Bosch</span>
-                <p>BFG 6000</p>
+                BFG 6000
               </h3>
             </a>
             <p class="discount">30 500 Р.</p>
@@ -216,7 +214,7 @@
             <a href="#">
               <h3 class="title">Перфоратор
                 <span class="good-label-style">Bosch</span>
-                <p>BFG 2000</p>
+                BFG 2000
               </h3>
             </a>
             <p class="discount"></p>
@@ -231,7 +229,7 @@
             <a href="#">
               <h3 class="title">Перфоратор
                 <span class="good-label-style">Bosch</span>
-                <p>BFG 3000</p>
+                BFG 3000
               </h3>
             </a>
             <p class="discount">22 500 Р.</p>
@@ -246,7 +244,7 @@
             <a href="#">
               <h3 class="title">Перфоратор
                 <span class="good-label-style">Bosch</span>
-                <p>BFG 6000</p>
+                BFG 6000
               </h3>
             </a>
             <p class="discount">30 500 Р.</p>
@@ -261,7 +259,7 @@
             <a href="#">
               <h3 class="title">Перфоратор
                 <span class="good-label-style">Bosch</span>
-                <p>BFG 2000</p>
+                BFG 2000
               </h3>
             </a>
             <p class="discount"></p>
@@ -276,7 +274,7 @@
             <a href="#">
               <h3 class="title">Перфоратор
                 <span class="good-label-style">Bosch</span>
-                <p>BFG 3000</p>
+                BFG 3000
               </h3>
             </a>
             <p class="discount">22 500 Р.</p>
@@ -291,7 +289,7 @@
             <a href="#">
               <h3 class="title">Перфоратор
                 <span class="good-label-style">Bosch</span>
-                <p>BFG 3000</p>
+                BFG 3000
               </h3>
             </a>
             <p class="discount">30 500 Р.</p>
@@ -306,7 +304,7 @@
             <a href="#">
               <h3 class="title">Перфоратор
                 <span class="good-label-style">Bosch</span>
-                <p>BFG 3000</p>
+                BFG 3000
               </h3>
             </a>
             <p class="discount"></p>
@@ -362,12 +360,12 @@
     </div>
     <div class="copyright">
       <div class="container container-flex">
-        <p>© 2010–2019 Компания «Техномарт»</p>
-        <p>Все права защищены</p>
+        <p class="creation-date">© 2010–2019 Компания «Техномарт» Все права защищены</p>
         <ul class="social-list">
           <li><a class="vk" href="#" aria-label="Вконтакте">
               <svg class="vk-logo" xmlns="http://www.w3.org/2000/svg" width="26" height="15" viewBox="0 0 26 15">
-                <path fill="#FFF" d="M16.138 11.51c.956-.309 2.18 2.04 3.483 2.939.978.681 1.727.534 1.727.534l3.473-.05s1.815-.112.957-1.554c-.071-.12-.503-1.069-2.585-3.022-2.177-2.043-1.882-1.712.739-5.244 1.597-2.153 2.236-3.468 2.036-4.028-.192-.539-1.365-.399-1.365-.399L20.69.713c-.381.001-.704.119-.851.515-.003.004-.621 1.666-1.445 3.079-1.741 2.989-2.436 3.148-2.724 2.961-.661-.433-.494-1.737-.494-2.664 0-2.897.432-4.105-.846-4.417-.427-.104-.739-.172-1.828-.182-1.392-.021-2.574 0-3.244.329-.445.223-.786.712-.579.74.26.035.843.16 1.155.586.401.552.389 1.789.389 1.789s.229 3.411-.54 3.834c-.528.29-1.25-.302-2.803-3.016-.793-1.388-1.392-2.922-1.392-2.922s-.116-.285-.326-.441c-.25-.185-.6-.244-.6-.244L.848.684S.29.7.085.946c-.182.218-.015.668-.015.668s2.909 6.881 6.203 10.347c3.02 3.182 6.452 2.971 6.452 2.971h1.555s.469-.054.709-.312c.224-.24.214-.691.214-.691s-.031-2.109.935-2.419z" />
+                <path fill="#FFF"
+                  d="M16.138 11.51c.956-.309 2.18 2.04 3.483 2.939.978.681 1.727.534 1.727.534l3.473-.05s1.815-.112.957-1.554c-.071-.12-.503-1.069-2.585-3.022-2.177-2.043-1.882-1.712.739-5.244 1.597-2.153 2.236-3.468 2.036-4.028-.192-.539-1.365-.399-1.365-.399L20.69.713c-.381.001-.704.119-.851.515-.003.004-.621 1.666-1.445 3.079-1.741 2.989-2.436 3.148-2.724 2.961-.661-.433-.494-1.737-.494-2.664 0-2.897.432-4.105-.846-4.417-.427-.104-.739-.172-1.828-.182-1.392-.021-2.574 0-3.244.329-.445.223-.786.712-.579.74.26.035.843.16 1.155.586.401.552.389 1.789.389 1.789s.229 3.411-.54 3.834c-.528.29-1.25-.302-2.803-3.016-.793-1.388-1.392-2.922-1.392-2.922s-.116-.285-.326-.441c-.25-.185-.6-.244-.6-.244L.848.684S.29.7.085.946c-.182.218-.015.668-.015.668s2.909 6.881 6.203 10.347c3.02 3.182 6.452 2.971 6.452 2.971h1.555s.469-.054.709-.312c.224-.24.214-.691.214-.691s-.031-2.109.935-2.419z" />
               </svg>
             </a>
           </li>
@@ -385,15 +383,13 @@
           </li>
         </ul>
         <div class="site-information">
-          <p>Обратная связь:</p>
-          <p>
-            <a class="feedback" href="mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+          <p class="feedback">Обратная связь:
+            <a class="feedback-link" href="mail@htmlacademy.ru">mail@htmlacademy.ru</a>
           </p>
-          <p>Разработано -</p>
-          <p>
+          <p class="create-by">Разработано -
             <a class="create" href="https://htmlacademy.ru">htmlacademy.ru</a>
           </p>
-      </div>
+        </div>
       </div>
     </div>
   </footer>
