add section headliners

--- a/catalog.html
+++ b/catalog.html
@@ -99,6 +99,7 @@
       <h2>Перфораторы</h2>
     </div>
     <section class="main-section container">
+      <h2 class="visually-hidden">Каталог товаров</h2>
       <div class="filter">
         <h2>Фильтр:</h2>
         <p>Цена:</p>
@@ -320,6 +321,7 @@
       </div>
     </section>
     <section class="about-drill">
+      <h2 class="visually-hidden">Подробно о продукте</h2>
       <div class="container">
         <h2>Пара слов о перфораторах</h2>
         <p>Перфоратор — универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне.<br>
