removed the height value

--- a/index.html
+++ b/index.html
@@ -183,13 +183,15 @@
           </div>
           <img class="image" src="img/perforator_4.jpg" width="218" height="170" alt="Перфоратор Bosch bfg 2000">
           <a class="good-link" href="#">
-            <h3 class="title">Перфоратор
+            <h3 class="title new-title">Перфоратор
               <span class="good-label-style">Bosch</span>
               BFG 2000
             </h3>
           </a>
           <p class="discount"></p>
-          <p class="price"><a class="price-link" href="#">12500 Р.</a></p>
+          <p class="price">
+            <a class="price-link" href="#">12500 Р.</a>
+          </p>
         </li>
       </ul>
     </section>
